--- a/simplemusicplayer/src/main/res/values/strings.xml
+++ b/simplemusicplayer/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleMusicPlayer</string>
+
+    <string name="play">재생</string>
+    <string name="pause">일시정지</string>
+    <string name="stop">재생중지</string>
 </resources>
